--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
         "@angular/platform-browser-dynamic": "15.0.3",
         "@angular/router": "15.0.3",
         "@capacitor/android": "^4.6.1",
+        "@capacitor/app": "^4.1.1",
+        "@capacitor/browser": "^4.1.0",
+        "@capacitor/camera": "^4.1.4",
         "@capacitor/core": "^4.6.1",
+        "@capacitor/geolocation": "^4.1.0",
+        "@ionic/pwa-elements": "^3.1.1",
         "@ngneat/transloco": "4.2.1",
         "apexcharts": "3.36.3",
         "crypto-js": "3.3.0",
@@ -35,6 +40,7 @@
         "luxon": "3.1.1",
         "ng-apexcharts": "1.7.4",
         "ngx-quill": "20.0.1",
+        "ngx-webcam": "^0.4.1",
         "perfect-scrollbar": "1.5.5",
         "quill": "1.3.7",
         "rxjs": "7.5.7",
